--- a/content/method/method.tex
+++ b/content/method/method.tex
@@ -51,7 +51,7 @@ Subsequently, \ac{nlm}~\cite{buades2005non} filtering has been previously succes
 \ac{nlm} filtering offers the advantage to use all the possible self-predictions that the image can provide rather than local or frequency filters such as Gaussian, anisotropic or Wiener filters~\cite{buades2005non}.
 An example of filtering using \ac{nlm} filter on \ac{oct} image is depicted in Fig\,\ref{subfig:raw} and Fig.\,\ref{subfig:nlm}.
 
-\begin{figure}
+\begin{figure}[Hb]
   \centering
   \hspace*{\fill}
   \subfigure[]{\label{subfig:vol}\includegraphics[width=0.3\linewidth]{volume.png}} \hfill
