killing some bibliography fields that nobody miss to get some space (BTW, 8 pages FUCK YEAH)

--- a/content/literature_review.bib
+++ b/content/literature_review.bib
@@ -129,7 +129,7 @@
 @article{Sharma2005,
 	title={The impact of diabetic retinopathy on health-related quality of life},
 	author={Sharma, S. and Oliver-Hernandez, A. and Liu, W. and Walt, J.},
-	journal={Curr. Opin. Ophtalmol.},
+	journal={Curr.\,Op.\,Ophtal.},
 	volume={16},
   	pages={155--159},
   	year={2005}
@@ -235,10 +235,8 @@
 @Article{Coupe2009,
    Author="Coupe, P.  and Hellier, P.  and Kervrann, C.  and Barillot, C. ",
    Title="{{N}onlocal means-based speckle filtering for ultrasound images}",
-   Journal="IEEE Trans Image Process",
+   Journal="IEEE TIP",
    Year="2009",
-   Volume="18",
-   Number="10",
    Pages="2221--2229",
    Month="Oct"
 }
