Adressed the reviewer comments

--- a/content/acronym_definition.tex
+++ b/content/acronym_definition.tex
@@ -207,9 +207,9 @@ long= Breast Ultra-Sound
   long = Non-Local Means
 }
 
-\DeclareAcronym{lopo}{
-  short = LOPO,
-  long =  Leave-One-Patient Out
+\DeclareAcronym{lopocv}{
+  short = LOPO-CV,
+  long =  Leave-One-Patient Out Cross-Validation
 }
 
 \DeclareAcronym{lbptop}{
