--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -4,22 +4,18 @@
 %                                     \toctitle is used
 %
 \author{
-  **** *******\thanks{**** **** *** ********* ********* ** *** ******** 
-                      ******* ** *********** ** *** ******* ********* *** 
-                      ***** **.*******-****-***-**}\inst{1} 
-  \and ********* ********\inst{1,2}
-  \and **** *****\inst{2}
-  \and ******* **********\inst{1}
+  Guillaume~Lema\^itre\thanks{Corresponding author: \email{guillaume.lemaitre@udg.edu}}\inst{1,2} 
+  \and Mojdeh~Rastgoo\inst{1,2}
+  \and Joan~Massich\inst{2}
+  \and D\'esir\'e~Sidib\'e\inst{2}
+  \and Fabrice~M\'eriaudeau\inst{2}
 }
 %
-\authorrunning{**** ******* et al.} % abbreviated author list (for running head)
+\authorrunning{Lema\^itre et al.} % abbreviated author list (for running head)
 %
 %
-\institute{******************, ********** ** *********, ** *** ** ** ********, \\
-******* ** *******, ******;\\
-\email{****.*******@***********.**}
+\institute{ViCOROB, Universitat de Girona, Campus Montilivi, Edifici P4, \\17071 Girona, Spain,
 \and
-*******, *********** ** ******, 
-****** *********, ******* **, ******* ******, *****
+LE2I UMR6306, CNRS, Arts et M\'etiers, Univ. Bourgogne Franche-Comt\'e, \\12 rue de la Fonderie, 71200 Le Creusot, France
 }
 %\addtocmark{Hamiltonian Mechanics} % additional mark in the TOC
