--- a/master.tex
+++ b/master.tex
@@ -29,9 +29,9 @@ Moreover, the experiments show that the proposed method achieves better classifi
 \input{content/intro/intro}          % the file wihtout .tex
 \input{content/method/method} 
 \input{content/experiment/experiment}
-\input{content/results/results}
+%\input{content/results/results}
 
-\section{Conclusions}
+\section{Conclusions}\label{sec:con}
 The work presented here addresses the automatic classification of \ac{sdoct} data to identify subjects with \ac{dme} versus normal.
 Based on the reported results, the low level volume 3D features and high level 2D features using patches achieve the most desirable results in the experimental setup presented here.
 The comparison against different datasets and methodologies, highlights that:
