--- a/content/experiment/experiment.tex
+++ b/content/experiment/experiment.tex
@@ -1,7 +1,7 @@
 % % include the figures path relative to the master file
 % \graphicspath{ {./content/results/figures/} }
 
-\section{Experiments and Validation }
+\section{Experiments and Validation}\label{sec:exp}
 
 \subsection{Datasets}
 
@@ -16,7 +16,7 @@ In this work, we validated our classification framework using two different data
 \end{description}
 
 \begin{tiny}
-  \begin{table}[Ht]
+  \begin{table}[b]
 \caption{Obtained results using SERI datasets.}% using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
@@ -37,23 +37,8 @@ Features 	& & &\multicolumn{4}{c}{$8^{riu2}$}&	 & & & &\multicolumn{4}{c}{$16^{r
 \end{table}
 \end{tiny}
 
-\subsection{Experiments \& results}
-
-Both datasets are filtered to attenuate the effect of speckle noise.
-SIRE dataset is processed using \ac{nlm} as stated in Sect.\,\ref{subsec:prepro}.
-The different parameters were empirically tested and fixed such that the patch size, the search window and the filtering parameter were set to $(15 \times 15)$, $(35 \times 35)$ and $0.4$, respectively.
-However, Duke dataset is already filtered using BM3D method~\cite{Srinivasan2014}.
-For both datasets, \ac{lbp} and \ac{lbptop} features are extracted for different sampling points of 8, 16 and 24 for radius of 1, 2 and 3, respectively.
-Two different mapping strategies are used: (i) the 2D B-scan for \ac{lbp} or the 3D volume for \ac{lbptop} and (ii) a set of 2D \ac{sw} of size $(7 \times 7)$ for \ac{lbp} or the 3D sub-volume for \ac{lbptop} of size $(7 \times 7 \times 7)$.
-For the high-level representation, when \ac{pca} is applied, the eigenvectors associated with the largest $99\%$ cumulative eigenvalues are selected to reduce the number of dimensions. In \ac{bow} approach, an empirical search was performed to find the optimal number of visual words which is finally fixed to 32.
-The number of trees for each \ac{rf} classifier was fixed to 100.
-For evaluation purposes, all the results are expressed in terms of \ac{se} and \ac{sp} using a cross-validated \ac{lopo} strategy.
-Thus, at each round a pair $(\ac{dme}, normal)$ is selected for testing while the rest acts as trainig.
-Performing \ac{lopo} cross validation, has the limitation that despite acheaving robust results due to the cross validation, no variance in \ac{se} or \ac{sp}, can be reported.
-A larger testing set can not be used here, due to the limited amount of available \ac{oct} volumes.
-
 \begin{tiny}
-  \begin{table}[Ht]
+  \begin{table}[t]
 \caption{Obtained results using Duke datasets.}% using \ac{rf} with 100 trees. High-level features with \ac{bow} are obtained with $K$ = 32 visual-words.}
 \centering
 \begin{tabular}{lcclcclcccclcclcccclcclc}
@@ -70,6 +55,50 @@ Features 	& & &\multicolumn{4}{c}{$8^{riu2}$}&	 & & & &\multicolumn{4}{c}{$16^{r
 \label{tab:Duke-data}
 \end{table}
 \end{tiny}
+
+\begin{tiny}
+\begin{table}[t]
+\caption{Comparing the proposed method by \cite{Venhuizen2015} on SERI and Duke datasets.}% with the \textbf{our two} best proposed methods. $K$ = 32 and \ac{rf} is trained using 100 tress}
+\centering
+\begin{tabular}{lcclcclcccclcclc}
+\toprule
+Data sets 	& & &\multicolumn{4}{c}{SERI}& & & & &\multicolumn{4}{c}{Duke} & \\
+  \cmidrule(l){2-8}  \cmidrule(l){10-16}
+	         & & & SE & & & SP & & & & & SE & & & SP & \\
+\midrule
+Venhuizen~\textit{et al.} \cite{Venhuizen2015} 		& & & 61.53 & & & 58.82 & & & & & 71.42 & & & 68.75 & \\
+\{\ac{lbp}+\ac{bow}+\ac{sw}\},$16^{riu2}$ 	& & & 81.25 & & & 75.00 & & & & & 86.67 & & & 100.00 &  \\
+\{\ac{lbptop}\},$16^{riu2}$				& & & 87.50 & & & 75.00 & & & & & 73.33 & & & 86.76 &  \\
+
+
+\bottomrule
+\end{tabular}
+\label{tab:ComparisonRefandOurs}
+\end{table}
+
+\end{tiny}
+
+\subsection{Experiments \& Results}
+
+Both datasets are filtered to attenuate the effect of speckle noise.
+SIRE dataset is processed using \ac{nlm} as stated in Sect.\,\ref{subsec:prepro}.
+The different parameters were empirically tested and fixed such that the patch size, the search window and the filtering parameter were set to $(15 \times 15)$, $(35 \times 35)$ and $0.4$, respectively.
+However, Duke dataset is already filtered using BM3D method~\cite{Srinivasan2014}.
+For both datasets, \ac{lbp} and \ac{lbptop} features are extracted for different sampling points of 8, 16 and 24 for radius of 1, 2 and 3, respectively.
+Two different mapping strategies are used: (i) \emph{global} mapping corresponding to the 2D B-scan for \ac{lbp} or the 3D volume for \ac{lbptop} and (ii) \emph{local} mapping considering to a set of 2D \ac{sw} of size $(7 \times 7)$ for \ac{lbp} or the 3D sub-volume for \ac{lbptop} of size $(7 \times 7 \times 7)$.
+For the high-level representation, when \ac{pca} is applied, the eigenvectors associated with the largest $99\%$ cumulative eigenvalues are selected to reduce the number of dimensions. In \ac{bow} approach, an empirical search was performed to find the optimal number of visual words which is finally fixed to 32.
+The number of trees for each \ac{rf} classifier was fixed to 100.
+
+For evaluation purposes, all the results are expressed in terms of \ac{se} and \ac{sp} using a \ac{lopocv} strategy.
+Thus, at each round a pair \ac{dme}-normal volume is selected for testing while the rest are used for training.
+The use of \ac{lopocv} implies that no variance in \ac{se} and \ac{sp} can be reported.
+However, and despite this limitation, \ac{lopocv} has been employed due to the small size of the datasets. 
+%Performing \ac{lopo} cross validation has the limitation that despite achieving robust results due to the cross validation, no variance in \ac{se} or \ac{sp}, can be reported.
+%For evaluation purposes, the results are cross-validated, by splitting the data in training and testing using a \ac{lopo} strategy. 
+%In this manner for each round a pair of \ac{dme} and normal \ac{oct} volume is selected to be used as the round test set, while the rest of the datasets are used for training. 
+%Performing \ac{lopo} cross validation has the limitation that despite achieving results are robust due to the cross validation, no variance in results can be reported. 
+%The classification performances are reported in terms of \ac{se} and specificity \ac{sp}.
+%A larger testing set can not be used here, due to the limited amount of available \ac{oct} volumes.
 
 \begin{description}
 
