--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -7,6 +7,7 @@
   Guillaume~Lema\^itre\thanks{Corresponding author: \email{guillaume.lemaitre@udg.edu}}\inst{1,2} 
   \and Mojdeh~Rastgoo\inst{1,2}
   \and Joan~Massich\inst{2}
+  \and Shrinivasan~Sankar\inst{2}
   \and D\'esir\'e~Sidib\'e\inst{2}
   \and Fabrice~M\'eriaudeau\inst{2}
 }
