Add References for the code

--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -4,7 +4,7 @@
 %                                     \toctitle is used
 %
 \author{
-  Guillaume~Lema\^itre\thanks{Corresponding author: \email{guillaume.lemaitre@udg.edu}}\inst{1,2} 
+  Guillaume~Lema\^itre\thanks{Corresponding authors: \email{g.lemaitre58@gmail.com}, \email{mojdeh.rastgoo@gmail.com}, \email{mailsik@gmail.com} - Source available in GitHub~\cite{Lemaitre2015}}\inst{1,2} 
   \and Mojdeh~Rastgoo\inst{1,2}
   \and Joan~Massich\inst{2}
   \and Shrinivasan~Sankar\inst{2}
