--- a/content/literature_review.bib
+++ b/content/literature_review.bib
@@ -241,6 +241,15 @@
    Month="Oct"
 }
 
+@misc{Lemaitre2015,
+  author       = {Lema\^itre, G. and Rastgoo, M. and Massich, J.},
+  title        = {retinopathy: MICCAI-OMIA-2015},
+  month        = jul,
+  year         = 2015,
+  doi          = {10.5281/zenodo.22195},
+  url          = {http://dx.doi.org/10.5281/zenodo.22195}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
