Solve the inconsistance in the title

--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -1,4 +1,4 @@
-\title{Classification of \acs*{sdoct} volumes with \acs*{lbp}: application to \acs*{dme} detection}
+\title{Classification of \acs*{sdoct} Volumes with \acs*{lbp}: Application to \acs*{dme} Detection}
 \titlerunning{Optimization approach to BUS lesion segmentation}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
